# tuxhistory

./: configure.ac  tuxmath.spec.in
data/: Makefile.am
data/images/: Makefile.am
data/images/buildings/: Makefile.am
data/images/forest/: Makefile.am
data/images/gui/: Makefile.am
data/images/others/: Makefile.am
data/images/terrain/: Makefile.am
data/images/terrain/arctic/: Makefile.am
data/images/terrain/desert/: Makefile.am
data/images/terrain/grassland/: Makefile.am
data/images/terrain/highSeas/: Makefile.am
data/images/terrain/marsh/: Makefile.am
data/images/terrain/ocean/: Makefile.am
data/images/terrain/plains/: Makefile.am
data/images/terrain/prairie/: Makefile.am
data/images/terrain/savannah/: Makefile.am
data/images/terrain/swamp/: Makefile.am
data/images/terrain/tundra/: Makefile.am
data/images/terrain/unexplored/: Makefile.am
data/images/units/: Makefile.am
data/images/units/archer/: license.txt  mesh.3DS
data/images/units/archer/attack/: Thumbs.db
data/images/units/archer/stand/: Thumbs.db
data/images/units/axeman/: license.txt  mesh.3DS
data/images/units/axeman/attack/: Thumbs.db
data/images/units/axeman/stand/: Thumbs.db
data/images/units/axeman/walk/: Thumbs.db
data/images/units/deer/: mesh.3DS
data/images/units/elephant/: license.txt  mesh.3DS
data/images/units/elephant/stand/: Thumbs.db
data/images/units/elephant/walk/: Thumbs.db
data/images/units/swordman/: mesh.3DS
data/images/units/swordman/attack/: Thumbs.db
data/images/units/villager/: license.txt  mesh.3DS
data/images/units/villager/mine/: Thumbs.db
data/images/units/villager/walk/: Thumbs.db
data/images/units/wolf/: mesh.3DS
data/maps/: Makefile.am  map.xml
data/menus/: main_menu.xml
data/objects/: .objects.xml.swp  Makefile.am  objects.xml
data/sounds/: Makefile.in
doc/: TODO.txt  changelog
m4/: ax_lua.m4
nsis/: tuxmath.nsi.in  tuxmath_with_conf.nsi.in
po/: POTFILES.in  ar.gmo  ar.po  ast.po  cs.gmo  cs.po  de.gmo  de.po  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  en_GB.gmo  en_GB.po  es.gmo  es.po  fi.gmo  fi.po  fr.gmo  fr.po  ga.gmo  ga.po  he.gmo  he.po  hu.gmo  hu.po  it.gmo  it.po  ja.gmo  ja.po  ku.po  nb.gmo  nb.po  nl.gmo  nl.po  nn.gmo  nn.po  oc.gmo  oc.po  pl.gmo  (+18 more)
src/: Makefile.am  SDL_extras.c  SDL_extras.h  ai.c  ai.h  audio.c  bheap.c  bheap.h  campaign.c  campaign.h  credits.c  factoroids.c  fileops.c  fileops.h  fileops_media.c  game.c  game.h  globals.h  graphs.c  graphs.h  hashtable.c  hashtable.h  highscore.c  llist.c  llist.h  loaders.c  loaders.h  map.c  map.h  menu.c  menu.h  multiplayer.c  objects.c  objects.h  options.c  panel.c  panel.h  players.c  players.h  setup.c  (+8 more)
src/t4kui/: demo.c.txt  ui_button.c  ui_button.h  ui_callback.h  ui_colors.c  ui_colors.h  ui_events.c  ui_events.h  ui_layouts.c  ui_layouts.h  ui_proxywidget.c  ui_proxywidget.h  ui_system.c  ui_system.h  ui_window.c  ui_window.h  util.c  util.h
