## Makefile.am for tuxhistory data/images/terrain/highSeas:

## Process with AutoMake:

highSeasdir = $(pkgdatadir)/images/terrain/highSeas

dist_backgrounds_DATA = 
border_E_even.png \
border_E_odd.png \
border_NE_even.png \
border_NE_odd.png \
border_N_even.png \
border_N_odd.png \
border_NW_even.png \
border_NW_odd.png \
border_SE_even.png \
border_SE_odd.png \
border_S_even.png \
border_S_odd.png \
border_SW_even.png \
border_SW_odd.png \
border_W_even.png \
border_W_odd.png \
center0.png \
center1.png 

